# ml-project-template

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
