[tool.poetry]
name = "ml-project-template"
version = "1.0.0"
description = "Standard ML Engineering Production Ready Project Template"
authors = [
    "Rares Istoc <istoc.rares@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
ruff = "^0.8.4"
bandit = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
